# agent-labs

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  agent.py  main.py  pyproject.toml  test_agent.py
agent_tools/: forex_tool.py
